Change to Java 8 compliant